--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,17 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.16</version>
         </dependency>
-
+        <dependency>  
+            <groupId>org.primefaces.extensions</groupId>  
+            <artifactId>all-themes</artifactId>   
+            <version>1.0.8</version>  
+        </dependency> 
+        <!-- https://mvnrepository.com/artifact/org.webjars/font-awesome -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.8.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
